# easy-ai-clients

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: PROJECT_CONTEXT.md  configuration.md  errors.md  operation_examples.md  provider_gap_audit.md  providers.md  usage.md
docs/account/: heygen.md
docs/audio/generate/: deepgram.md  deepinfra.md  elevenlabs.md  google.md  groq.md  heygen.md  mistral.md  openai.md  openrouter.md  runway.md  stability.md  together.md  xai.md
docs/audio/transcribe/: deepgram.md  deepinfra.md  elevenlabs.md  falai.md  fireworks.md  google.md  groq.md  huggingface.md  live_multilingual_benchmark.md  mistral.md  openai.md  openrouter.md  revai.md  speechmatics.md  together.md  xai.md
docs/audio/voices/: deepinfra.md  elevenlabs.md  heygen.md  mistral.md  together.md
docs/image/analyze/: anthropic.md  deepinfra.md  falai.md  fireworks.md  google.md  groq.md  huggingface.md  mistral.md  openai.md  openrouter.md  together.md  xai.md
docs/image/edit/: bfl.md  deepinfra.md  falai.md  fireworks.md  google.md  huggingface.md  openai.md  openrouter.md  runway.md  stability.md  together.md  xai.md
docs/image/generate/: bfl.md  deepinfra.md  falai.md  fireworks.md  google.md  huggingface.md  openai.md  openrouter.md  runway.md  stability.md  together.md  xai.md
docs/image/remix/: bfl.md  deepinfra.md  falai.md  fireworks.md  google.md  huggingface.md  openai.md  openrouter.md  runway.md  stability.md  together.md  xai.md
docs/media/: heygen.md
docs/music/: deapi.md  elevenlabs.md  google.md  runware.md
docs/music/audio_to_music/: deapi.md  falai.md  generatesongs.md  minimax.md  modelslab.md  musicfy.md  musicgpt.md  replicate.md  runware.md  scenario.md  sonauto.md  soundverse.md  stability.md  topmediai.md  wavespeedai.md
docs/music/edit/: falai.md  jen.md  musicgpt.md  replicate.md  runware.md  scenario.md  sonauto.md  soundverse.md  stability.md  topmediai.md
docs/music/lyrics_to_song/: cloudflare.md  deapi.md  elevenlabs.md  falai.md  generatesongs.md  google.md  minimax.md  musicful.md  musicgpt.md  novita.md  replicate.md  runware.md  segmind.md  sonauto.md  (+3 more)
docs/text/: anthropic.md  cohere.md  deepinfra.md  deepseek.md  fal.md  falai.md  fireworks.md  google.md  groq.md  huggingface.md  mistral.md  openai.md  openrouter.md  together.md  xai.md
docs/webhooks/: heygen.md
src/easy_ai_clients/: __init__.py  _error_utils.py  _falai_pricing.py  _heygen.py  client.py  exceptions.py  models.py
tests/: music_voice_preset_snapshot.py  test_aliases_and_models.py  test_audio_api.py  test_configuration_and_docs.py  test_credentials.py  test_dispatchers.py  test_documentation_coverage.py  test_heygen_contract.py  test_image_api.py  test_image_falai_cost.py  test_imports.py  test_live_heygen.py  test_live_music.py  test_live_transcribe.py  test_live_transcribe_multilingual_matrix.py  test_live_video.py  test_media_and_pricing.py  test_music_contract.py  test_music_dispatcher.py  test_music_documentation_coverage.py  test_music_generation_options.py  test_music_lyrics_prompt.py  test_music_provider_contract.py  test_music_provider_payloads.py  test_music_style_adapter.py  test_text_api.py  test_transcription_contract.py  test_video_api.py  test_video_async_refs.py  test_video_contract.py
(+459 files in other folders)
