[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "easy-ai-clients"
version = "0.13.1"
description = "Unified multi-provider Python client for text, audio, image, music, and video AI APIs."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Arthur", email = "arthur@sart.dev" }
]
keywords = [
  "ai",
  "llm",
  "text-generation",
  "tts",
  "stt",
  "speech-to-text",
  "text-to-speech",
  "vision",
  "image-generation",
  "image-editing",
  "video-generation",
  "music-generation",
  "text-to-video",
  "image-to-video",
  "multimodal",
  "openai",
  "anthropic",
  "claude",
  "google",
  "gemini",
  "elevenlabs",
  "deepgram",
  "mistral",
  "groq",
  "fireworks",
  "together",
  "deepinfra",
  "deepseek",
  "huggingface",
  "openrouter",
  "falai",
  "heygen",
  "stability",
  "black-forest-labs",
  "speechmatics",
  "xai",
  "cohere",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Multimedia :: Video",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "requests>=2.32,<3",
  "httpx>=0.28,<1",
  "Pillow>=10,<13",
  "pydub>=0.25,<1",
  "imageio-ffmpeg>=0.5,<1",
  "python-dotenv>=1,<2",
  "audioop-lts>=0.2; python_version >= '3.13'",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.3",
  "ruff>=0.11",
  "twine>=6.1",
]

[project.urls]
Homepage = "https://github.com/reiarthur/easy-ai-clients"
Repository = "https://github.com/reiarthur/easy-ai-clients"
Documentation = "https://github.com/reiarthur/easy-ai-clients/tree/main/docs"
Changelog = "https://github.com/reiarthur/easy-ai-clients/blob/main/CHANGELOG.md"
Issues = "https://github.com/reiarthur/easy-ai-clients/issues"
Package = "https://pypi.org/project/easy-ai-clients/"

[tool.hatch.build.targets.wheel]
packages = ["src/easy_ai_clients"]
exclude = [
  "/docs/audio/transcribe/live_multilingual_benchmark.md",
]

[tool.hatch.build.targets.wheel.force-include]
"docs" = "docs"

[tool.hatch.build.targets.sdist]
include = [
  "/.env.example",
  "/src",
  "/docs",
  "/tests",
  "/README.md",
  "/CHANGELOG.md",
  "/CONTRIBUTING.md",
  "/LICENSE",
  "/pyproject.toml",
]
exclude = [
  "/docs/audio/transcribe/live_multilingual_benchmark.md",
  "/tests/fixtures/transcribe_multilingual_audios.tar.xz",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "live: tests that may call external provider APIs when explicitly enabled",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "UP047"]
